--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PDCA</title>
+	<title>MP3 + OGG</title>
 	<meta charset="utf-8" lang="pt-br">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">    
 </head>
 
 <body>
-	<div class="container">
-		<h1 class="title">Texto 1</h1>
-		<h2 class="subtitle">Texto 2</h2>
-		<button class="play">play</button>		
+	<audio id="audio-mp3">
+		<source src="assets/audio.mp3" type="audio/mpeg"/>
+		<source src="assets/audio.mp3" type="audio/mpeg"/> 
+	</audio>
+
+	<div class="container1">
+		<h1 class="title">Audios em formatos mp3 e ogg</h1>
+		<h2 class="subtitle">testando...</h2>
 	</div>
 
+	<div class="container2">
+		<button class="play" onclick="playaudio()">play</button>
+		<button class="pause" onclick="pauseaudio()">pause</button>	
+	</div>
+
+	<script type="text/javascript" src="js/action.js"></script>
 </body>
 </html>
