alt html, css, js

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>MP3 + OGG</title>
-	<meta charset="utf-8" lang="pt-br">
+    <title>MP3 + OGG</title>
+    <meta charset="utf-8" lang="pt-br">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<audio id="audio-mp3">
-		<source src="assets/audio.mp3" type="audio/mpeg"/>
-		<source src="assets/audio.mp3" type="audio/mpeg"/> 
-	</audio>
-
-	<div class="container1">
-		<h1 class="title">Audios em formatos mp3 e ogg</h1>
-		<h2 class="subtitle">testando...</h2>
-	</div>
-
-	<div class="container2">
-		<button class="play" onclick="playaudio()">play</button>
-		<button class="pause" onclick="pauseaudio()">pause</button>	
-	</div>
-
-	<script type="text/javascript" src="js/action.js"></script>
+    <audio id="audio-mp3-ogg">
+        <source src="assets/audio.mp3" type="audio/mpeg" />
+        <source src="assets/audio.mp3" type="audio/mpeg" />
+    </audio>
+    <div class="container1">
+        <h1 class="title">Audios em formatos mp3 e ogg</h1>
+        <h2 class="subtitle">testando...</h2>
+    </div>
+    <div class="container2">
+        <button class="play" onclick="playaudio()">play</button>
+        <button class="pause" onclick="pauseaudio()">pause</button>
+    </div>
+    <script type="text/javascript" src="js/action.js"></script>
 </body>
+
 </html>
