bugFixes html ogg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <audio id="audio-mp3-ogg">
         <source src="assets/audio.mp3" type="audio/mpeg" />
-        <source src="assets/audio.mp3" type="audio/mpeg" />
+        <source src="assets/audio.ogg" type="audio/ogg" />
     </audio>
     <div class="container1">
         <h1 class="title">Audios em formatos mp3 e ogg</h1>
